--- a/junior/advice-generator-app-main/index.html
+++ b/junior/advice-generator-app-main/index.html
@@ -19,11 +19,13 @@
           <h1 class="message"> 
             "It is easy to sit up and take notice, whats is difficult is getting up and take action
           </h1>
-          <div>
+          <div class="divider">
             <img src="/images/pattern-divider-desktop.svg" alt="Imagem de uma divisória com um símbolo de pause no meio">
           </div>
       </div>
-      <img src="/images/icon-dice.svg" alt="Imagem de um Dado verde">
+      <div class="dice">
+        <img src="/images/icon-dice.svg" alt="Imagem de um Dado verde">
+      </div>
     </section>
   </div>
 
