add javascript files

--- a/junior/advice-generator-app-main/index.html
+++ b/junior/advice-generator-app-main/index.html
@@ -13,26 +13,22 @@
   <div class="card">
     <section>
       <div class="advice-box">
-        <h2 class="advice-number"> 
+        <h2 id="message-number" class="advice-number"> 
           Advice #117 
         </h2>
-          <h1 class="message"> 
+          <h1 id="message-text" class="message"> 
             "It is easy to sit up and take notice, whats is difficult is getting up and take action
           </h1>
           <div class="divider">
             <img src="/images/pattern-divider-desktop.svg" alt="Imagem de uma divisória com um símbolo de pause no meio">
           </div>
       </div>
-      <div class="dice">
-        <img src="/images/icon-dice.svg" alt="Imagem de um Dado verde">
+      <div class="dice" id="dice">
+        <img id="dice-img" src="/images/icon-dice.svg" alt="Imagem de um Dado verde">
       </div>
     </section>
   </div>
 
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <script src="/js/fetchApi.js"></script>
 </body>
 </html>
