--- a/newbie/order-summary-component/index.html
+++ b/newbie/order-summary-component/index.html
@@ -9,7 +9,7 @@
   
   <title>Frontend Mentor | Order summary card</title>
 
-  <link rel="stylesheet" href="/styles/css/main.css">
+  <link rel="stylesheet" href="styles/css/main.css">
 
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&family=Red+Hat+Display:wght@500;700;900&family=Roboto:wght@100&display=swap" rel="stylesheet">
 </head>
