update readme and add js

--- a/junior/blogr-landing-page-main/index.html
+++ b/junior/blogr-landing-page-main/index.html
@@ -21,7 +21,7 @@
           <ul>
           <li>
             <span>   Product </span>
-            <img src="/images/icon-arrow-light.svg" alt="">
+            <img id="arrow" src="/images/icon-arrow-light.svg" alt="">
             <!--Overview
             Pricing
             Marketplace
@@ -30,7 +30,7 @@
           </li>
           <li>
             <span>   Company </span>
-            <img src="/images/icon-arrow-light.svg" alt="">
+            <img id="arrow" src="/images/icon-arrow-light.svg" alt="">
               <!-- About
               Team
               Blog
@@ -38,7 +38,7 @@
           </li>
           <li>
             <span>   Connect </span>
-            <img src="/images/icon-arrow-light.svg" alt="">
+            <img id="arrow" src="/images/icon-arrow-light.svg" alt="">
             <!-- Contact
             Newsletter
             LinkedIn  !-->
@@ -169,25 +169,25 @@
     </div>
     <div class="footer-items">
       <ul>
-        <p>  Product</p>
-        <li> Overview</li>
-        <li>Pricing</li>
-        <li>Marketplace</li>
-        <li> Features</li>
-        <li>Integrations</li>
+        <p> Product </p>
+        <li><a href=""> Overview</a></li>
+        <li><a href="">Pricing</a></li>
+        <li><a href="">Marketplace</a></li>
+        <li><a href="">Features</a> </li>
+        <li><a href="">Integrations</a></li>
       </ul>
       <ul>
         <p>    Company</p>
-        <li>  About</li>
-        <li>Team</li>
-        <li>Blog</li>
-        <li>  Careers </li>
+        <li> <a href="">About</a> </li>
+        <li><a href="">Team</a></li>
+        <li><a href="">Blog</a></li>
+        <li> <a href="">Careers</a>  </li>
       </ul>
       <ul>
         <p>  Connect</p>
-        <li> Contact</li>
-        <li>Newsletter</li>
-        <li>LinkedIn</li>
+        <li> <a href="">Contact</a></li>
+        <li><a href="">Newsletter</a></li>
+        <li><a href="">LinkedIn</a></li>
       </ul>
     </div>
     
@@ -197,12 +197,11 @@
 
   <div class="wrapper-att">
     <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="https://www.github.com/pedrovinhas"> Pedro Henrique Vinhas 🪐 </a>
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a> | Coded by <a href="https://www.github.com/pedrovinhas"> Pedro Henrique Vinhas 🪐 </a>
     </div>
   </div>
 
 
-<script src="js/app.js"> </script>
+<script src="js/menu.js"> </script>
 </body>
 </html>
