add javascript menu

--- a/junior/blogr-landing-page-main/index.html
+++ b/junior/blogr-landing-page-main/index.html
@@ -19,29 +19,35 @@
         <div class="header-left">
           <img src="images/logo.svg" alt="">
           <ul>
-          <li>
+          <li class="menu-list">
             <span>   Product </span>
             <img id="arrow" src="/images/icon-arrow-light.svg" alt="">
-            <!--Overview
-            Pricing
-            Marketplace
-            Features
-            Integrations !-->
+               <ul class="popup-list">
+              <li><span>Overview</span></li>
+              <li><span>Pricing</span></li>
+              <li><span>Marketplace</span></li>
+              <li><span>Features</span></li>
+              <li><span>Integrations</span></li>
+            </ul>
           </li>
-          <li>
+          <li class="menu-list">
             <span>   Company </span>
             <img id="arrow" src="/images/icon-arrow-light.svg" alt="">
-              <!-- About
-              Team
-              Blog
-              Careers !-->
+            <ul class="popup-list">
+              <li><span>About</span></li>
+              <li><span>Team</span></li>
+              <li><span>Blog</span></li>
+              <li><span>Careers</span></li>
+            </ul>
           </li>
-          <li>
+          <li class="menu-list">
             <span>   Connect </span>
             <img id="arrow" src="/images/icon-arrow-light.svg" alt="">
-            <!-- Contact
-            Newsletter
-            LinkedIn  !-->
+            <ul class="popup-list">
+              <li><span>Contact</span></li>
+              <li><span>Newsletter</span></li>
+              <li><span>LinkedIn</span></li>
+            </ul>
           </li>
           </ul>
         </div>
