finished js and desing adjusts

--- a/junior/blogr-landing-page-main/index.html
+++ b/junior/blogr-landing-page-main/index.html
@@ -18,7 +18,7 @@
       <nav>
         <div class="header-left">
           <img src="images/logo.svg" alt="">
-          <ul>
+          <ul class="nav-list">
           <li class="menu-list">
             <span>   Product </span>
             <img id="arrow" src="/images/icon-arrow-light.svg" alt="">
@@ -52,7 +52,7 @@
           </ul>
         </div>
         <div class="header-right">
-          <button>
+          <button class="login">
             Login
           </button>
           <button>
@@ -71,7 +71,7 @@
           Grow your audience and build your online brand
         </h2>
         <div>
-          <button>
+          <button class="start">
             Start for Free
           </button>
           <button>
